// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropzone withStyles should render correctly 1`] = `
<HvProvider
  changeTheme={[Function]}
  theme={null}
  uiKitTheme="dawn"
>
  <StylesProvider
    generateClassName={[Function]}
    injectFirst={true}
  >
    <ThemeProvider
      theme={
        Object {
          "breakpoints": Object {
            "between": [Function],
            "down": [Function],
            "keys": Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ],
            "only": [Function],
            "up": [Function],
            "values": Object {
              "lg": 1270,
              "md": 960,
              "sm": 600,
              "xl": 1920,
              "xs": 0,
            },
            "width": [Function],
          },
          "direction": "ltr",
          "hv": Object {
            "deprecated": Object {
              "palette": Object {
                "accent": Object {},
                "atmosphere": Object {},
                "base": Object {},
                "semantic": Object {},
                "support": Object {},
              },
              "typography": Object {
                "disabledText": Object {},
              },
              "viz": Object {
                "palette": Object {
                  "categorical": Object {},
                  "polarizes": Object {},
                  "sequential": Object {},
                  "undefinedState": Object {},
                },
              },
            },
            "name": "dawn",
            "palette": Object {
              "accent": Object {
                "acce0": "#FFFFFF",
                "acce1": "#414141",
                "acce2": "#146BD2",
                "acce2h": "#4389DB",
                "acce3": "#CC0000",
              },
              "atmosphere": Object {
                "atmo1": "#FFFFFF",
                "atmo2": "#F9F9F9",
                "atmo3": "#F5F5F5",
                "atmo4": "#F0F0F0",
                "atmo5": "#DEDEDE",
                "atmo6": "#BCBCBC",
                "atmo7": "#999999",
              },
              "base": Object {
                "base1": "#FFFFFF",
                "base2": "#414141",
              },
              "semantic": Object {
                "sema1": "#63A621",
                "sema10": "#EF9A9A",
                "sema11": "#E57373",
                "sema12": "#EF5350",
                "sema13": "#E53935",
                "sema14": "#C62828",
                "sema15": "#80DEEA",
                "sema16": "#4DD0E1",
                "sema17": "#26C6DA",
                "sema18": "#00ACC1",
                "sema19": "#00838F",
                "sema2": "#72CCCB",
                "sema3": "#E68C17",
                "sema4": "#FF5252",
                "sema5": "#C51162",
                "sema6": "#AA00FF",
                "sema7": "#D3E3F6",
                "sema8": "#DFECD1",
                "sema9": "#F5D8D8",
              },
              "support": Object {
                "supp1": "#0F8B8D",
                "supp2": "#734B6D",
                "supp3": "#4E7599",
                "supp4": "#C19C31",
                "supp5": "#546B6B",
              },
            },
            "spacing": Object {
              "lg": 60,
              "md": 30,
              "sm": 20,
              "xl": 90,
              "xs": 10,
            },
            "type": "light",
            "typography": Object {
              "3xlTitle": Object {
                "color": "#414141",
                "fontSize": "42px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "52px",
              },
              "4xlTitle": Object {
                "color": "#414141",
                "fontSize": "52px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "60px",
              },
              "5xlTitle": Object {
                "color": "#414141",
                "fontSize": "52px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "60px",
              },
              "disabledButtonText": Object {
                "color": "#999999",
                "fontSize": "14px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "20px",
              },
              "disabledText": Object {
                "color": "#999999",
                "fontSize": "12px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "16px",
              },
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "highlightText": Object {
                "color": "#414141",
                "fontSize": "14px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "20px",
              },
              "infoText": Object {
                "color": "#999999",
                "fontSize": "12px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "16px",
              },
              "inlineLink": Object {
                "color": "#146BD2",
                "fontSize": "14px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "20px",
              },
              "lTitle": Object {
                "color": "#414141",
                "fontSize": "32px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "40px",
              },
              "labelText": Object {
                "color": "#414141",
                "fontSize": "12px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "16px",
              },
              "mTitle": Object {
                "color": "#414141",
                "fontSize": "22px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "30px",
              },
              "normalText": Object {
                "color": "#414141",
                "fontSize": "14px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "20px",
              },
              "placeholderText": Object {
                "color": "#999999",
                "fontSize": "14px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "20px",
              },
              "sLink": Object {
                "color": "#146BD2",
                "fontSize": "12px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "16px",
              },
              "sText": Object {
                "color": "#414141",
                "fontSize": "12px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "16px",
              },
              "sTitle": Object {
                "color": "#414141",
                "fontSize": "22px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "30px",
              },
              "selectedNavText": Object {
                "color": "#CC0000",
                "fontSize": "14px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "20px",
              },
              "selectedText": Object {
                "background": "#414141",
                "color": "#F9F9F9",
                "fontSize": "14px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "20px",
              },
              "vizText": Object {
                "color": "#414141",
                "fontSize": "10px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "15px",
              },
              "xlTitle": Object {
                "color": "#414141",
                "fontSize": "32px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "40px",
              },
              "xsTitle": Object {
                "color": "#414141",
                "fontSize": "18px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "28px",
              },
              "xxlTitle": Object {
                "color": "#414141",
                "fontSize": "42px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "52px",
              },
              "xxsTitle": Object {
                "color": "#414141",
                "fontSize": "18px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "28px",
              },
            },
            "viz": Object {
              "palette": Object {
                "categorical": Object {
                  "cviz1": "#2DB3E0",
                  "cviz10": "#419393",
                  "cviz11": "#58C9DD",
                  "cviz12": "#F8C189",
                  "cviz13": "#528BBF",
                  "cviz14": "#DE64BD",
                  "cviz15": "#73BF9C",
                  "cviz16": "#9672C1",
                  "cviz17": "#EB95AF",
                  "cviz18": "#646A98",
                  "cviz19": "#D88136",
                  "cviz2": "#FF990D",
                  "cviz20": "#309B59",
                  "cviz3": "#D31F6B",
                  "cviz4": "#FFD00A",
                  "cviz5": "#18C38A",
                  "cviz6": "#098CB2",
                  "cviz7": "#EA5B86",
                  "cviz8": "#9B469B",
                  "cviz9": "#F4763D",
                },
                "polarizes": Object {
                  "cviz21": "#869F1E",
                  "cviz22": "#A4991C",
                  "cviz23": "#C4931A",
                  "cviz24": "#E68C17",
                  "cviz25": "#F27034",
                  "cviz26": "#FF5252",
                  "cviz27": "#EC3D57",
                  "cviz28": "#D8265D",
                  "sema1": "#63A621",
                  "sema5": "#C51162",
                },
                "sequential": Object {
                  "cviz1": "#2DB3E0",
                  "cviz1_100": "#E3F1F6",
                  "cviz1_200": "#CFEAF3",
                  "cviz1_300": "#BAE3F3",
                  "cviz1_400": "#A6DCEE",
                  "cviz1_500": "#92D5EC",
                  "cviz1_600": "#7ECEE9",
                  "cviz1_700": "#69C7E7",
                  "cviz1_800": "#55C0E4",
                  "cviz1_900": "#40B9E2",
                },
                "undefinedState": Object {
                  "atmo5": "#DEDEDE",
                },
              },
            },
          },
          "mixins": Object {
            "gutters": [Function],
            "toolbar": Object {
              "@media (min-width:0px) and (orientation: landscape)": Object {
                "minHeight": 48,
              },
              "@media (min-width:600px)": Object {
                "minHeight": 64,
              },
              "minHeight": 56,
            },
          },
          "overrides": Object {
            "MuiAppBar": Object {
              "colorDefault": Object {
                "backgroundColor": "#FFFFFF",
                "contrastText": "#414141",
              },
              "root": Object {
                "@media (min-width: 600px)": Object {
                  "height": "50px",
                },
                "borderTop": "4px solid #CC0000",
              },
            },
            "MuiIconButton": Object {
              "root": Object {
                "&:focus": Object {
                  "outlineColor": "Highlight",
                  "outlineOffset": -2,
                  "outlineStyle": "auto",
                  "outlineWidth": 4,
                },
                "&:hover": Object {
                  "backgroundColor": "#F0F0F0",
                },
                "borderRadius": 0,
                "padding": 0,
              },
            },
            "MuiToolbar": Object {
              "dense": Object {
                "minHeight": "46px",
              },
              "gutters": Object {
                "@media (min-width:600px)": Object {
                  "paddingLeft": "20px",
                  "paddingRight": "20px",
                },
                "paddingLeft": "20px",
                "paddingRight": "20px",
              },
              "root": Object {
                "@media (min-width: 600px)": Object {
                  "minHeight": "46px",
                },
                "alignItems": "center",
              },
            },
          },
          "palette": Object {
            "acce0": "#FFFFFF",
            "acce1": "#414141",
            "acce2": "#146BD2",
            "acce2h": "#4389DB",
            "acce3": "#CC0000",
            "action": Object {
              "activatedOpacity": 0.12,
              "active": "rgba(0, 0, 0, 0.54)",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "disabledBackground": "rgba(0, 0, 0, 0.12)",
              "disabledOpacity": 0.38,
              "focus": "rgba(0, 0, 0, 0.12)",
              "focusOpacity": 0.12,
              "hover": "rgba(0, 0, 0, 0.04)",
              "hoverOpacity": 0.04,
              "selected": "rgba(0, 0, 0, 0.08)",
              "selectedOpacity": 0.08,
            },
            "atmo1": "#FFFFFF",
            "atmo2": "#F9F9F9",
            "atmo3": "#F5F5F5",
            "atmo4": "#F0F0F0",
            "atmo5": "#DEDEDE",
            "atmo6": "#BCBCBC",
            "atmo7": "#999999",
            "augmentColor": [Function],
            "background": Object {
              "default": "#F5F5F5",
              "paper": "#fff",
            },
            "base1": "#FFFFFF",
            "base2": "#414141",
            "common": Object {
              "black": "#000",
              "white": "#fff",
            },
            "contrastThreshold": 3,
            "divider": "rgba(0, 0, 0, 0.12)",
            "error": Object {
              "contrastText": "#fff",
              "dark": "#d32f2f",
              "light": "#e57373",
              "main": "#f44336",
            },
            "getContrastText": [Function],
            "grey": Object {
              "100": "#f5f5f5",
              "200": "#eeeeee",
              "300": "#e0e0e0",
              "400": "#bdbdbd",
              "50": "#fafafa",
              "500": "#9e9e9e",
              "600": "#757575",
              "700": "#616161",
              "800": "#424242",
              "900": "#212121",
              "A100": "#d5d5d5",
              "A200": "#aaaaaa",
              "A400": "#303030",
              "A700": "#616161",
            },
            "info": Object {
              "contrastText": "#fff",
              "dark": "#1976d2",
              "light": "#64b5f6",
              "main": "#2196f3",
            },
            "primary": Object {
              "contrastText": "#fff",
              "dark": "rgb(14, 74, 147)",
              "light": "#4389DB",
              "main": "#146BD2",
            },
            "secondary": Object {
              "contrastText": "#fff",
              "dark": "rgb(45, 45, 45)",
              "light": "#999999",
              "main": "#414141",
            },
            "sema1": "#63A621",
            "sema10": "#EF9A9A",
            "sema11": "#E57373",
            "sema12": "#EF5350",
            "sema13": "#E53935",
            "sema14": "#C62828",
            "sema15": "#80DEEA",
            "sema16": "#4DD0E1",
            "sema17": "#26C6DA",
            "sema18": "#00ACC1",
            "sema19": "#00838F",
            "sema2": "#72CCCB",
            "sema3": "#E68C17",
            "sema4": "#FF5252",
            "sema5": "#C51162",
            "sema6": "#AA00FF",
            "sema7": "#D3E3F6",
            "sema8": "#DFECD1",
            "sema9": "#F5D8D8",
            "success": Object {
              "contrastText": "rgba(0, 0, 0, 0.87)",
              "dark": "#388e3c",
              "light": "#81c784",
              "main": "#4caf50",
            },
            "supp1": "#0F8B8D",
            "supp2": "#734B6D",
            "supp3": "#4E7599",
            "supp4": "#C19C31",
            "supp5": "#546B6B",
            "text": Object {
              "disabled": "#999999",
              "hint": "rgba(0, 0, 0, 0.38)",
              "primary": "#414141",
              "secondary": "rgba(0, 0, 0, 0.54)",
            },
            "tonalOffset": 0.2,
            "type": "light",
            "warning": Object {
              "contrastText": "rgba(0, 0, 0, 0.87)",
              "dark": "#f57c00",
              "light": "#ffb74d",
              "main": "#ff9800",
            },
          },
          "props": Object {
            "MuiButtonBase": Object {
              "disableRipple": true,
            },
            "MuiInput": Object {
              "disableUnderline": true,
            },
          },
          "shadows": Array [
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
          ],
          "shape": Object {
            "borderRadius": 0,
          },
          "spacing": [Function],
          "transitions": Object {
            "create": [Function],
            "duration": Object {
              "complex": 375,
              "enteringScreen": 225,
              "leavingScreen": 195,
              "short": 250,
              "shorter": 200,
              "shortest": 150,
              "standard": 300,
            },
            "easing": Object {
              "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
              "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
              "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
              "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
            },
            "getAutoHeightDuration": [Function],
          },
          "typography": Object {
            "body1": Object {
              "color": "#414141",
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "14px",
              "fontWeight": 400,
              "letterSpacing": "0.02em",
              "lineHeight": "20px",
            },
            "body2": Object {
              "color": "#414141",
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "14px",
              "fontWeight": 400,
              "letterSpacing": "0.02em",
              "lineHeight": "20px",
            },
            "button": Object {
              "color": "#414141",
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "14px",
              "fontWeight": 600,
              "letterSpacing": "0.02em",
              "lineHeight": "20px",
              "textTransform": "uppercase",
            },
            "caption": Object {
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "0.75rem",
              "fontWeight": 400,
              "lineHeight": 1.66,
            },
            "fontFamily": Array [
              "'Open Sans'",
              "Arial",
              "Helvetica",
              "sans-serif",
            ],
            "fontSize": 14,
            "fontWeightBold": 700,
            "fontWeightLight": 300,
            "fontWeightMedium": 500,
            "fontWeightRegular": 400,
            "h1": Object {
              "color": "#414141",
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "32px",
              "fontWeight": 600,
              "letterSpacing": "0.02em",
              "lineHeight": "40px",
            },
            "h2": Object {
              "color": "#414141",
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "32px",
              "fontWeight": 400,
              "letterSpacing": "0.02em",
              "lineHeight": "40px",
            },
            "h3": Object {
              "color": "#414141",
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "22px",
              "fontWeight": 600,
              "letterSpacing": "0.02em",
              "lineHeight": "30px",
            },
            "h4": Object {
              "color": "#414141",
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "22px",
              "fontWeight": 400,
              "letterSpacing": "0.02em",
              "lineHeight": "30px",
            },
            "h5": Object {
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "1.5rem",
              "fontWeight": 400,
              "lineHeight": 1.334,
            },
            "h6": Object {
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "1.25rem",
              "fontWeight": 500,
              "lineHeight": 1.6,
            },
            "htmlFontSize": 16,
            "overline": Object {
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "0.75rem",
              "fontWeight": 400,
              "lineHeight": 2.66,
              "textTransform": "uppercase",
            },
            "pxToRem": [Function],
            "round": [Function],
            "subtitle1": Object {
              "color": "#414141",
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "14px",
              "fontWeight": 600,
              "letterSpacing": "0.02em",
              "lineHeight": "20px",
            },
            "subtitle2": Object {
              "color": "#414141",
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "12px",
              "fontWeight": 600,
              "letterSpacing": "0.02em",
              "lineHeight": "16px",
            },
            "suppressDeprecationWarnings": true,
          },
          "zIndex": Object {
            "appBar": 1100,
            "drawer": 1200,
            "mobileStepper": 1000,
            "modal": 1300,
            "snackbar": 1400,
            "speedDial": 1050,
            "tooltip": 1500,
          },
          Symbol(mui.nested): false,
        }
      }
    >
      <CssBaseline />
      <WithStyles(DropZone)
        acceptedFiles={Array []}
        disabled={false}
        fileList={
          Array [
            Object {
              "name": "Screenshot 2019-12-05 at 17.15.43.png",
              "size": 141,
              "type": "image/png",
            },
            Object {
              "name": "Screenshot 2019-12-05 at 12.03.13.png",
              "size": 875,
              "type": "image/png",
            },
          ]
        }
        id={null}
        labels={
          Object {
            "dragText": "Drag and drop or ",
            "dropFilesText": "Drop files here",
            "dropzoneLabel": "My Label",
            "fileSizeError": "The file exceeds the maximum upload size",
            "fileTypeError": "File type not allowed for upload",
            "progressConjunction": "of",
            "removeFileButtonLabel": "Remove File",
            "selectFilesText": "Select files",
            "sizeWarningLabel": "Max. file size:",
          }
        }
        maxFileSize={1}
        multiple={true}
        onDragEnter={[MockFunction]}
        onDragLeave={[MockFunction]}
        onDropCapture={[MockFunction]}
        onFileRemoved={[MockFunction]}
        onFilesAdded={[MockFunction]}
      >
        <DropZone
          acceptedFiles={Array []}
          classes={
            Object {
              "dragAction": "HvFileUploaderDropZone-dragAction",
              "dragText": "HvFileUploaderDropZone-dragText",
              "dropArea": "HvFileUploaderDropZone-dropArea",
              "dropZoneAreaIcon": "HvFileUploaderDropZone-dropZoneAreaIcon",
              "dropZoneAreaLabels": "HvFileUploaderDropZone-dropZoneAreaLabels",
              "dropZoneContainer": "HvFileUploaderDropZone-dropZoneContainer",
              "dropZoneContainerDisabled": "HvFileUploaderDropZone-dropZoneContainerDisabled",
              "dropZoneLabelsGroup": "HvFileUploaderDropZone-dropZoneLabelsGroup",
              "inputArea": "HvFileUploaderDropZone-inputArea",
              "selectFilesText": "HvFileUploaderDropZone-selectFilesText",
            }
          }
          disabled={false}
          fileList={
            Array [
              Object {
                "name": "Screenshot 2019-12-05 at 17.15.43.png",
                "size": 141,
                "type": "image/png",
              },
              Object {
                "name": "Screenshot 2019-12-05 at 12.03.13.png",
                "size": 875,
                "type": "image/png",
              },
            ]
          }
          id={null}
          labels={
            Object {
              "dragText": "Drag and drop or ",
              "dropFilesText": "Drop files here",
              "dropzoneLabel": "My Label",
              "fileSizeError": "The file exceeds the maximum upload size",
              "fileTypeError": "File type not allowed for upload",
              "progressConjunction": "of",
              "removeFileButtonLabel": "Remove File",
              "selectFilesText": "Select files",
              "sizeWarningLabel": "Max. file size:",
            }
          }
          maxFileSize={1}
          multiple={true}
          onDragEnter={[MockFunction]}
          onDragLeave={[MockFunction]}
          onDropCapture={[MockFunction]}
          onFileRemoved={[MockFunction]}
          onFilesAdded={[MockFunction]}
        >
          <div
            aria-label="File Dropzone"
            className="HvFileUploaderDropZone-dropZoneLabelsGroup"
            id="hv-filedropzone-2"
          >
            <WithStyles(ForwardRef)
              component="label"
              htmlFor="hv-filedropzone-2-input-file"
              id="hv-filedropzone-2-input-file-label"
              variant="labelText"
            >
              <ForwardRef
                classes={
                  Object {
                    "3xlTitle": "HvTypography-3xlTitle",
                    "4xlTitle": "HvTypography-4xlTitle",
                    "5xlTitle": "HvTypography-5xlTitle",
                    "baseFontFamily": "HvTypography-baseFontFamily",
                    "disabledButtonText": "HvTypography-disabledButtonText",
                    "highlightText": "HvTypography-highlightText",
                    "infoText": "HvTypography-infoText",
                    "inlineLink": "HvTypography-inlineLink",
                    "lTitle": "HvTypography-lTitle",
                    "labelText": "HvTypography-labelText",
                    "mTitle": "HvTypography-mTitle",
                    "margin": "HvTypography-margin",
                    "normalText": "HvTypography-normalText",
                    "placeholderText": "HvTypography-placeholderText",
                    "sLink": "HvTypography-sLink",
                    "sText": "HvTypography-sText",
                    "sTitle": "HvTypography-sTitle",
                    "selectedNavText": "HvTypography-selectedNavText",
                    "selectedText": "HvTypography-selectedText",
                    "vizText": "HvTypography-vizText",
                    "xlTitle": "HvTypography-xlTitle",
                    "xsTitle": "HvTypography-xsTitle",
                    "xxlTitle": "HvTypography-xxlTitle",
                    "xxsTitle": "HvTypography-xxsTitle",
                  }
                }
                component="label"
                htmlFor="hv-filedropzone-2-input-file"
                id="hv-filedropzone-2-input-file-label"
                variant="labelText"
              >
                <label
                  className="HvTypography-labelText HvTypography-baseFontFamily HvTypography-margin"
                  htmlFor="hv-filedropzone-2-input-file"
                  id="hv-filedropzone-2-input-file-label"
                />
              </ForwardRef>
            </WithStyles(ForwardRef)>
            <WithStyles(ForwardRef)
              variant="infoText"
            >
              <ForwardRef
                classes={
                  Object {
                    "3xlTitle": "HvTypography-3xlTitle",
                    "4xlTitle": "HvTypography-4xlTitle",
                    "5xlTitle": "HvTypography-5xlTitle",
                    "baseFontFamily": "HvTypography-baseFontFamily",
                    "disabledButtonText": "HvTypography-disabledButtonText",
                    "highlightText": "HvTypography-highlightText",
                    "infoText": "HvTypography-infoText",
                    "inlineLink": "HvTypography-inlineLink",
                    "lTitle": "HvTypography-lTitle",
                    "labelText": "HvTypography-labelText",
                    "mTitle": "HvTypography-mTitle",
                    "margin": "HvTypography-margin",
                    "normalText": "HvTypography-normalText",
                    "placeholderText": "HvTypography-placeholderText",
                    "sLink": "HvTypography-sLink",
                    "sText": "HvTypography-sText",
                    "sTitle": "HvTypography-sTitle",
                    "selectedNavText": "HvTypography-selectedNavText",
                    "selectedText": "HvTypography-selectedText",
                    "vizText": "HvTypography-vizText",
                    "xlTitle": "HvTypography-xlTitle",
                    "xsTitle": "HvTypography-xsTitle",
                    "xxlTitle": "HvTypography-xxlTitle",
                    "xxsTitle": "HvTypography-xxsTitle",
                  }
                }
                variant="infoText"
              >
                <p
                  className="HvTypography-infoText HvTypography-baseFontFamily HvTypography-margin"
                >
                  undefined 1.00B
                </p>
              </ForwardRef>
            </WithStyles(ForwardRef)>
          </div>
          <div
            className="HvFileUploaderDropZone-dropZoneContainer"
            id="hv-filedropzone-2-button"
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDrop={[Function]}
            onDropCapture={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <input
              className="HvFileUploaderDropZone-inputArea"
              disabled={false}
              id="hv-filedropzone-2-input-file"
              multiple={true}
              onChange={[Function]}
              onClick={[Function]}
              tabIndex={-1}
              title="undefined undefined"
              type="file"
            />
            <div
              className="HvFileUploaderDropZone-dropArea"
            >
              <WithStyles(Doc)
                className="HvFileUploaderDropZone-dropZoneAreaIcon"
                color="acce1"
                iconSize="M"
              >
                <Doc
                  className="HvFileUploaderDropZone-dropZoneAreaIcon"
                  classes={
                    Object {
                      "root": "HvIconDoc-root",
                      "rootL": "HvIconDoc-rootL",
                      "rootM": "HvIconDoc-rootM",
                      "rootS": "HvIconDoc-rootS",
                      "rootXs": "HvIconDoc-rootXs",
                    }
                  }
                  color="acce1"
                  iconSize="M"
                >
                  <div
                    className="HvFileUploaderDropZone-dropZoneAreaIcon HvIconDoc-root HvIconDoc-rootM"
                  >
                    <svg
                      focusable={false}
                      height="32px"
                      viewBox="0 0 16 16"
                      width="32px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        className="color0"
                        d="M9 0H2v16h12V5zm3.6 5H9V1.4zm.4 10H3V1h5v5h5z"
                        fill="#414141"
                      />
                    </svg>
                  </div>
                </Doc>
              </WithStyles(Doc)>
              <div
                className="HvFileUploaderDropZone-dropZoneAreaLabels"
              >
                <WithStyles(ForwardRef)
                  className="HvFileUploaderDropZone-dragText"
                >
                  <ForwardRef
                    className="HvFileUploaderDropZone-dragText"
                    classes={
                      Object {
                        "3xlTitle": "HvTypography-3xlTitle",
                        "4xlTitle": "HvTypography-4xlTitle",
                        "5xlTitle": "HvTypography-5xlTitle",
                        "baseFontFamily": "HvTypography-baseFontFamily",
                        "disabledButtonText": "HvTypography-disabledButtonText",
                        "highlightText": "HvTypography-highlightText",
                        "infoText": "HvTypography-infoText",
                        "inlineLink": "HvTypography-inlineLink",
                        "lTitle": "HvTypography-lTitle",
                        "labelText": "HvTypography-labelText",
                        "mTitle": "HvTypography-mTitle",
                        "margin": "HvTypography-margin",
                        "normalText": "HvTypography-normalText",
                        "placeholderText": "HvTypography-placeholderText",
                        "sLink": "HvTypography-sLink",
                        "sText": "HvTypography-sText",
                        "sTitle": "HvTypography-sTitle",
                        "selectedNavText": "HvTypography-selectedNavText",
                        "selectedText": "HvTypography-selectedText",
                        "vizText": "HvTypography-vizText",
                        "xlTitle": "HvTypography-xlTitle",
                        "xsTitle": "HvTypography-xsTitle",
                        "xxlTitle": "HvTypography-xxlTitle",
                        "xxsTitle": "HvTypography-xxsTitle",
                      }
                    }
                  >
                    <p
                      className="HvTypography-normalText HvTypography-baseFontFamily HvTypography-margin HvFileUploaderDropZone-dragText"
                    >
                      <span
                        className="HvFileUploaderDropZone-selectFilesText"
                      >
                         undefined
                      </span>
                    </p>
                  </ForwardRef>
                </WithStyles(ForwardRef)>
              </div>
            </div>
          </div>
        </DropZone>
      </WithStyles(DropZone)>
    </ThemeProvider>
  </StylesProvider>
</HvProvider>
`;

exports[`Dropzone withStyles should render correctly when disabled 1`] = `
<HvProvider
  changeTheme={[Function]}
  theme={null}
  uiKitTheme="dawn"
>
  <StylesProvider
    generateClassName={[Function]}
    injectFirst={true}
  >
    <ThemeProvider
      theme={
        Object {
          "breakpoints": Object {
            "between": [Function],
            "down": [Function],
            "keys": Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ],
            "only": [Function],
            "up": [Function],
            "values": Object {
              "lg": 1270,
              "md": 960,
              "sm": 600,
              "xl": 1920,
              "xs": 0,
            },
            "width": [Function],
          },
          "direction": "ltr",
          "hv": Object {
            "deprecated": Object {
              "palette": Object {
                "accent": Object {},
                "atmosphere": Object {},
                "base": Object {},
                "semantic": Object {},
                "support": Object {},
              },
              "typography": Object {
                "disabledText": Object {},
              },
              "viz": Object {
                "palette": Object {
                  "categorical": Object {},
                  "polarizes": Object {},
                  "sequential": Object {},
                  "undefinedState": Object {},
                },
              },
            },
            "name": "dawn",
            "palette": Object {
              "accent": Object {
                "acce0": "#FFFFFF",
                "acce1": "#414141",
                "acce2": "#146BD2",
                "acce2h": "#4389DB",
                "acce3": "#CC0000",
              },
              "atmosphere": Object {
                "atmo1": "#FFFFFF",
                "atmo2": "#F9F9F9",
                "atmo3": "#F5F5F5",
                "atmo4": "#F0F0F0",
                "atmo5": "#DEDEDE",
                "atmo6": "#BCBCBC",
                "atmo7": "#999999",
              },
              "base": Object {
                "base1": "#FFFFFF",
                "base2": "#414141",
              },
              "semantic": Object {
                "sema1": "#63A621",
                "sema10": "#EF9A9A",
                "sema11": "#E57373",
                "sema12": "#EF5350",
                "sema13": "#E53935",
                "sema14": "#C62828",
                "sema15": "#80DEEA",
                "sema16": "#4DD0E1",
                "sema17": "#26C6DA",
                "sema18": "#00ACC1",
                "sema19": "#00838F",
                "sema2": "#72CCCB",
                "sema3": "#E68C17",
                "sema4": "#FF5252",
                "sema5": "#C51162",
                "sema6": "#AA00FF",
                "sema7": "#D3E3F6",
                "sema8": "#DFECD1",
                "sema9": "#F5D8D8",
              },
              "support": Object {
                "supp1": "#0F8B8D",
                "supp2": "#734B6D",
                "supp3": "#4E7599",
                "supp4": "#C19C31",
                "supp5": "#546B6B",
              },
            },
            "spacing": Object {
              "lg": 60,
              "md": 30,
              "sm": 20,
              "xl": 90,
              "xs": 10,
            },
            "type": "light",
            "typography": Object {
              "3xlTitle": Object {
                "color": "#414141",
                "fontSize": "42px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "52px",
              },
              "4xlTitle": Object {
                "color": "#414141",
                "fontSize": "52px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "60px",
              },
              "5xlTitle": Object {
                "color": "#414141",
                "fontSize": "52px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "60px",
              },
              "disabledButtonText": Object {
                "color": "#999999",
                "fontSize": "14px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "20px",
              },
              "disabledText": Object {
                "color": "#999999",
                "fontSize": "12px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "16px",
              },
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "highlightText": Object {
                "color": "#414141",
                "fontSize": "14px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "20px",
              },
              "infoText": Object {
                "color": "#999999",
                "fontSize": "12px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "16px",
              },
              "inlineLink": Object {
                "color": "#146BD2",
                "fontSize": "14px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "20px",
              },
              "lTitle": Object {
                "color": "#414141",
                "fontSize": "32px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "40px",
              },
              "labelText": Object {
                "color": "#414141",
                "fontSize": "12px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "16px",
              },
              "mTitle": Object {
                "color": "#414141",
                "fontSize": "22px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "30px",
              },
              "normalText": Object {
                "color": "#414141",
                "fontSize": "14px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "20px",
              },
              "placeholderText": Object {
                "color": "#999999",
                "fontSize": "14px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "20px",
              },
              "sLink": Object {
                "color": "#146BD2",
                "fontSize": "12px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "16px",
              },
              "sText": Object {
                "color": "#414141",
                "fontSize": "12px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "16px",
              },
              "sTitle": Object {
                "color": "#414141",
                "fontSize": "22px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "30px",
              },
              "selectedNavText": Object {
                "color": "#CC0000",
                "fontSize": "14px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "20px",
              },
              "selectedText": Object {
                "background": "#414141",
                "color": "#F9F9F9",
                "fontSize": "14px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "20px",
              },
              "vizText": Object {
                "color": "#414141",
                "fontSize": "10px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "15px",
              },
              "xlTitle": Object {
                "color": "#414141",
                "fontSize": "32px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "40px",
              },
              "xsTitle": Object {
                "color": "#414141",
                "fontSize": "18px",
                "fontWeight": 600,
                "letterSpacing": "0.02em",
                "lineHeight": "28px",
              },
              "xxlTitle": Object {
                "color": "#414141",
                "fontSize": "42px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "52px",
              },
              "xxsTitle": Object {
                "color": "#414141",
                "fontSize": "18px",
                "fontWeight": 400,
                "letterSpacing": "0.02em",
                "lineHeight": "28px",
              },
            },
            "viz": Object {
              "palette": Object {
                "categorical": Object {
                  "cviz1": "#2DB3E0",
                  "cviz10": "#419393",
                  "cviz11": "#58C9DD",
                  "cviz12": "#F8C189",
                  "cviz13": "#528BBF",
                  "cviz14": "#DE64BD",
                  "cviz15": "#73BF9C",
                  "cviz16": "#9672C1",
                  "cviz17": "#EB95AF",
                  "cviz18": "#646A98",
                  "cviz19": "#D88136",
                  "cviz2": "#FF990D",
                  "cviz20": "#309B59",
                  "cviz3": "#D31F6B",
                  "cviz4": "#FFD00A",
                  "cviz5": "#18C38A",
                  "cviz6": "#098CB2",
                  "cviz7": "#EA5B86",
                  "cviz8": "#9B469B",
                  "cviz9": "#F4763D",
                },
                "polarizes": Object {
                  "cviz21": "#869F1E",
                  "cviz22": "#A4991C",
                  "cviz23": "#C4931A",
                  "cviz24": "#E68C17",
                  "cviz25": "#F27034",
                  "cviz26": "#FF5252",
                  "cviz27": "#EC3D57",
                  "cviz28": "#D8265D",
                  "sema1": "#63A621",
                  "sema5": "#C51162",
                },
                "sequential": Object {
                  "cviz1": "#2DB3E0",
                  "cviz1_100": "#E3F1F6",
                  "cviz1_200": "#CFEAF3",
                  "cviz1_300": "#BAE3F3",
                  "cviz1_400": "#A6DCEE",
                  "cviz1_500": "#92D5EC",
                  "cviz1_600": "#7ECEE9",
                  "cviz1_700": "#69C7E7",
                  "cviz1_800": "#55C0E4",
                  "cviz1_900": "#40B9E2",
                },
                "undefinedState": Object {
                  "atmo5": "#DEDEDE",
                },
              },
            },
          },
          "mixins": Object {
            "gutters": [Function],
            "toolbar": Object {
              "@media (min-width:0px) and (orientation: landscape)": Object {
                "minHeight": 48,
              },
              "@media (min-width:600px)": Object {
                "minHeight": 64,
              },
              "minHeight": 56,
            },
          },
          "overrides": Object {
            "MuiAppBar": Object {
              "colorDefault": Object {
                "backgroundColor": "#FFFFFF",
                "contrastText": "#414141",
              },
              "root": Object {
                "@media (min-width: 600px)": Object {
                  "height": "50px",
                },
                "borderTop": "4px solid #CC0000",
              },
            },
            "MuiIconButton": Object {
              "root": Object {
                "&:focus": Object {
                  "outlineColor": "Highlight",
                  "outlineOffset": -2,
                  "outlineStyle": "auto",
                  "outlineWidth": 4,
                },
                "&:hover": Object {
                  "backgroundColor": "#F0F0F0",
                },
                "borderRadius": 0,
                "padding": 0,
              },
            },
            "MuiToolbar": Object {
              "dense": Object {
                "minHeight": "46px",
              },
              "gutters": Object {
                "@media (min-width:600px)": Object {
                  "paddingLeft": "20px",
                  "paddingRight": "20px",
                },
                "paddingLeft": "20px",
                "paddingRight": "20px",
              },
              "root": Object {
                "@media (min-width: 600px)": Object {
                  "minHeight": "46px",
                },
                "alignItems": "center",
              },
            },
          },
          "palette": Object {
            "acce0": "#FFFFFF",
            "acce1": "#414141",
            "acce2": "#146BD2",
            "acce2h": "#4389DB",
            "acce3": "#CC0000",
            "action": Object {
              "activatedOpacity": 0.12,
              "active": "rgba(0, 0, 0, 0.54)",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "disabledBackground": "rgba(0, 0, 0, 0.12)",
              "disabledOpacity": 0.38,
              "focus": "rgba(0, 0, 0, 0.12)",
              "focusOpacity": 0.12,
              "hover": "rgba(0, 0, 0, 0.04)",
              "hoverOpacity": 0.04,
              "selected": "rgba(0, 0, 0, 0.08)",
              "selectedOpacity": 0.08,
            },
            "atmo1": "#FFFFFF",
            "atmo2": "#F9F9F9",
            "atmo3": "#F5F5F5",
            "atmo4": "#F0F0F0",
            "atmo5": "#DEDEDE",
            "atmo6": "#BCBCBC",
            "atmo7": "#999999",
            "augmentColor": [Function],
            "background": Object {
              "default": "#F5F5F5",
              "paper": "#fff",
            },
            "base1": "#FFFFFF",
            "base2": "#414141",
            "common": Object {
              "black": "#000",
              "white": "#fff",
            },
            "contrastThreshold": 3,
            "divider": "rgba(0, 0, 0, 0.12)",
            "error": Object {
              "contrastText": "#fff",
              "dark": "#d32f2f",
              "light": "#e57373",
              "main": "#f44336",
            },
            "getContrastText": [Function],
            "grey": Object {
              "100": "#f5f5f5",
              "200": "#eeeeee",
              "300": "#e0e0e0",
              "400": "#bdbdbd",
              "50": "#fafafa",
              "500": "#9e9e9e",
              "600": "#757575",
              "700": "#616161",
              "800": "#424242",
              "900": "#212121",
              "A100": "#d5d5d5",
              "A200": "#aaaaaa",
              "A400": "#303030",
              "A700": "#616161",
            },
            "info": Object {
              "contrastText": "#fff",
              "dark": "#1976d2",
              "light": "#64b5f6",
              "main": "#2196f3",
            },
            "primary": Object {
              "contrastText": "#fff",
              "dark": "rgb(14, 74, 147)",
              "light": "#4389DB",
              "main": "#146BD2",
            },
            "secondary": Object {
              "contrastText": "#fff",
              "dark": "rgb(45, 45, 45)",
              "light": "#999999",
              "main": "#414141",
            },
            "sema1": "#63A621",
            "sema10": "#EF9A9A",
            "sema11": "#E57373",
            "sema12": "#EF5350",
            "sema13": "#E53935",
            "sema14": "#C62828",
            "sema15": "#80DEEA",
            "sema16": "#4DD0E1",
            "sema17": "#26C6DA",
            "sema18": "#00ACC1",
            "sema19": "#00838F",
            "sema2": "#72CCCB",
            "sema3": "#E68C17",
            "sema4": "#FF5252",
            "sema5": "#C51162",
            "sema6": "#AA00FF",
            "sema7": "#D3E3F6",
            "sema8": "#DFECD1",
            "sema9": "#F5D8D8",
            "success": Object {
              "contrastText": "rgba(0, 0, 0, 0.87)",
              "dark": "#388e3c",
              "light": "#81c784",
              "main": "#4caf50",
            },
            "supp1": "#0F8B8D",
            "supp2": "#734B6D",
            "supp3": "#4E7599",
            "supp4": "#C19C31",
            "supp5": "#546B6B",
            "text": Object {
              "disabled": "#999999",
              "hint": "rgba(0, 0, 0, 0.38)",
              "primary": "#414141",
              "secondary": "rgba(0, 0, 0, 0.54)",
            },
            "tonalOffset": 0.2,
            "type": "light",
            "warning": Object {
              "contrastText": "rgba(0, 0, 0, 0.87)",
              "dark": "#f57c00",
              "light": "#ffb74d",
              "main": "#ff9800",
            },
          },
          "props": Object {
            "MuiButtonBase": Object {
              "disableRipple": true,
            },
            "MuiInput": Object {
              "disableUnderline": true,
            },
          },
          "shadows": Array [
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
            "none",
          ],
          "shape": Object {
            "borderRadius": 0,
          },
          "spacing": [Function],
          "transitions": Object {
            "create": [Function],
            "duration": Object {
              "complex": 375,
              "enteringScreen": 225,
              "leavingScreen": 195,
              "short": 250,
              "shorter": 200,
              "shortest": 150,
              "standard": 300,
            },
            "easing": Object {
              "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
              "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
              "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
              "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
            },
            "getAutoHeightDuration": [Function],
          },
          "typography": Object {
            "body1": Object {
              "color": "#414141",
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "14px",
              "fontWeight": 400,
              "letterSpacing": "0.02em",
              "lineHeight": "20px",
            },
            "body2": Object {
              "color": "#414141",
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "14px",
              "fontWeight": 400,
              "letterSpacing": "0.02em",
              "lineHeight": "20px",
            },
            "button": Object {
              "color": "#414141",
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "14px",
              "fontWeight": 600,
              "letterSpacing": "0.02em",
              "lineHeight": "20px",
              "textTransform": "uppercase",
            },
            "caption": Object {
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "0.75rem",
              "fontWeight": 400,
              "lineHeight": 1.66,
            },
            "fontFamily": Array [
              "'Open Sans'",
              "Arial",
              "Helvetica",
              "sans-serif",
            ],
            "fontSize": 14,
            "fontWeightBold": 700,
            "fontWeightLight": 300,
            "fontWeightMedium": 500,
            "fontWeightRegular": 400,
            "h1": Object {
              "color": "#414141",
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "32px",
              "fontWeight": 600,
              "letterSpacing": "0.02em",
              "lineHeight": "40px",
            },
            "h2": Object {
              "color": "#414141",
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "32px",
              "fontWeight": 400,
              "letterSpacing": "0.02em",
              "lineHeight": "40px",
            },
            "h3": Object {
              "color": "#414141",
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "22px",
              "fontWeight": 600,
              "letterSpacing": "0.02em",
              "lineHeight": "30px",
            },
            "h4": Object {
              "color": "#414141",
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "22px",
              "fontWeight": 400,
              "letterSpacing": "0.02em",
              "lineHeight": "30px",
            },
            "h5": Object {
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "1.5rem",
              "fontWeight": 400,
              "lineHeight": 1.334,
            },
            "h6": Object {
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "1.25rem",
              "fontWeight": 500,
              "lineHeight": 1.6,
            },
            "htmlFontSize": 16,
            "overline": Object {
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "0.75rem",
              "fontWeight": 400,
              "lineHeight": 2.66,
              "textTransform": "uppercase",
            },
            "pxToRem": [Function],
            "round": [Function],
            "subtitle1": Object {
              "color": "#414141",
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "14px",
              "fontWeight": 600,
              "letterSpacing": "0.02em",
              "lineHeight": "20px",
            },
            "subtitle2": Object {
              "color": "#414141",
              "fontFamily": Array [
                "'Open Sans'",
                "Arial",
                "Helvetica",
                "sans-serif",
              ],
              "fontSize": "12px",
              "fontWeight": 600,
              "letterSpacing": "0.02em",
              "lineHeight": "16px",
            },
            "suppressDeprecationWarnings": true,
          },
          "zIndex": Object {
            "appBar": 1100,
            "drawer": 1200,
            "mobileStepper": 1000,
            "modal": 1300,
            "snackbar": 1400,
            "speedDial": 1050,
            "tooltip": 1500,
          },
          Symbol(mui.nested): false,
        }
      }
    >
      <CssBaseline />
      <WithStyles(DropZone)
        acceptedFiles={Array []}
        disabled={true}
        fileList={
          Array [
            Object {
              "name": "Screenshot 2019-12-05 at 17.15.43.png",
              "size": 141,
              "type": "image/png",
            },
            Object {
              "name": "Screenshot 2019-12-05 at 12.03.13.png",
              "size": 875,
              "type": "image/png",
            },
          ]
        }
        id={null}
        labels={
          Object {
            "dragText": "Drag and drop or ",
            "dropFilesText": "Drop files here",
            "dropzoneLabel": "My Label",
            "fileSizeError": "The file exceeds the maximum upload size",
            "fileTypeError": "File type not allowed for upload",
            "progressConjunction": "of",
            "removeFileButtonLabel": "Remove File",
            "selectFilesText": "Select files",
            "sizeWarningLabel": "Max. file size:",
          }
        }
        maxFileSize={1}
        multiple={false}
        onDragEnter={[MockFunction]}
        onDragLeave={[MockFunction]}
        onDropCapture={[MockFunction]}
        onFileRemoved={[MockFunction]}
        onFilesAdded={[MockFunction]}
      >
        <DropZone
          acceptedFiles={Array []}
          classes={
            Object {
              "dragAction": "HvFileUploaderDropZone-dragAction",
              "dragText": "HvFileUploaderDropZone-dragText",
              "dropArea": "HvFileUploaderDropZone-dropArea",
              "dropZoneAreaIcon": "HvFileUploaderDropZone-dropZoneAreaIcon",
              "dropZoneAreaLabels": "HvFileUploaderDropZone-dropZoneAreaLabels",
              "dropZoneContainer": "HvFileUploaderDropZone-dropZoneContainer",
              "dropZoneContainerDisabled": "HvFileUploaderDropZone-dropZoneContainerDisabled",
              "dropZoneLabelsGroup": "HvFileUploaderDropZone-dropZoneLabelsGroup",
              "inputArea": "HvFileUploaderDropZone-inputArea",
              "selectFilesText": "HvFileUploaderDropZone-selectFilesText",
            }
          }
          disabled={true}
          fileList={
            Array [
              Object {
                "name": "Screenshot 2019-12-05 at 17.15.43.png",
                "size": 141,
                "type": "image/png",
              },
              Object {
                "name": "Screenshot 2019-12-05 at 12.03.13.png",
                "size": 875,
                "type": "image/png",
              },
            ]
          }
          id={null}
          labels={
            Object {
              "dragText": "Drag and drop or ",
              "dropFilesText": "Drop files here",
              "dropzoneLabel": "My Label",
              "fileSizeError": "The file exceeds the maximum upload size",
              "fileTypeError": "File type not allowed for upload",
              "progressConjunction": "of",
              "removeFileButtonLabel": "Remove File",
              "selectFilesText": "Select files",
              "sizeWarningLabel": "Max. file size:",
            }
          }
          maxFileSize={1}
          multiple={false}
          onDragEnter={[MockFunction]}
          onDragLeave={[MockFunction]}
          onDropCapture={[MockFunction]}
          onFileRemoved={[MockFunction]}
          onFilesAdded={[MockFunction]}
        >
          <div
            aria-label="File Dropzone"
            className="HvFileUploaderDropZone-dropZoneLabelsGroup"
            id="hv-filedropzone-4"
          >
            <WithStyles(ForwardRef)
              component="label"
              htmlFor="hv-filedropzone-4-input-file"
              id="hv-filedropzone-4-input-file-label"
              variant="labelText"
            >
              <ForwardRef
                classes={
                  Object {
                    "3xlTitle": "HvTypography-3xlTitle",
                    "4xlTitle": "HvTypography-4xlTitle",
                    "5xlTitle": "HvTypography-5xlTitle",
                    "baseFontFamily": "HvTypography-baseFontFamily",
                    "disabledButtonText": "HvTypography-disabledButtonText",
                    "highlightText": "HvTypography-highlightText",
                    "infoText": "HvTypography-infoText",
                    "inlineLink": "HvTypography-inlineLink",
                    "lTitle": "HvTypography-lTitle",
                    "labelText": "HvTypography-labelText",
                    "mTitle": "HvTypography-mTitle",
                    "margin": "HvTypography-margin",
                    "normalText": "HvTypography-normalText",
                    "placeholderText": "HvTypography-placeholderText",
                    "sLink": "HvTypography-sLink",
                    "sText": "HvTypography-sText",
                    "sTitle": "HvTypography-sTitle",
                    "selectedNavText": "HvTypography-selectedNavText",
                    "selectedText": "HvTypography-selectedText",
                    "vizText": "HvTypography-vizText",
                    "xlTitle": "HvTypography-xlTitle",
                    "xsTitle": "HvTypography-xsTitle",
                    "xxlTitle": "HvTypography-xxlTitle",
                    "xxsTitle": "HvTypography-xxsTitle",
                  }
                }
                component="label"
                htmlFor="hv-filedropzone-4-input-file"
                id="hv-filedropzone-4-input-file-label"
                variant="labelText"
              >
                <label
                  className="HvTypography-labelText HvTypography-baseFontFamily HvTypography-margin"
                  htmlFor="hv-filedropzone-4-input-file"
                  id="hv-filedropzone-4-input-file-label"
                />
              </ForwardRef>
            </WithStyles(ForwardRef)>
            <WithStyles(ForwardRef)
              variant="infoText"
            >
              <ForwardRef
                classes={
                  Object {
                    "3xlTitle": "HvTypography-3xlTitle",
                    "4xlTitle": "HvTypography-4xlTitle",
                    "5xlTitle": "HvTypography-5xlTitle",
                    "baseFontFamily": "HvTypography-baseFontFamily",
                    "disabledButtonText": "HvTypography-disabledButtonText",
                    "highlightText": "HvTypography-highlightText",
                    "infoText": "HvTypography-infoText",
                    "inlineLink": "HvTypography-inlineLink",
                    "lTitle": "HvTypography-lTitle",
                    "labelText": "HvTypography-labelText",
                    "mTitle": "HvTypography-mTitle",
                    "margin": "HvTypography-margin",
                    "normalText": "HvTypography-normalText",
                    "placeholderText": "HvTypography-placeholderText",
                    "sLink": "HvTypography-sLink",
                    "sText": "HvTypography-sText",
                    "sTitle": "HvTypography-sTitle",
                    "selectedNavText": "HvTypography-selectedNavText",
                    "selectedText": "HvTypography-selectedText",
                    "vizText": "HvTypography-vizText",
                    "xlTitle": "HvTypography-xlTitle",
                    "xsTitle": "HvTypography-xsTitle",
                    "xxlTitle": "HvTypography-xxlTitle",
                    "xxsTitle": "HvTypography-xxsTitle",
                  }
                }
                variant="infoText"
              >
                <p
                  className="HvTypography-infoText HvTypography-baseFontFamily HvTypography-margin"
                >
                  undefined 1.00B
                </p>
              </ForwardRef>
            </WithStyles(ForwardRef)>
          </div>
          <div
            className="HvFileUploaderDropZone-dropZoneContainer HvFileUploaderDropZone-dropZoneContainerDisabled"
            id="hv-filedropzone-4-button"
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDrop={[Function]}
            onDropCapture={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <input
              className="HvFileUploaderDropZone-inputArea"
              disabled={true}
              id="hv-filedropzone-4-input-file"
              multiple={false}
              onChange={[Function]}
              onClick={[Function]}
              tabIndex={-1}
              title=""
              type="file"
            />
            <div
              className="HvFileUploaderDropZone-dropArea"
            >
              <WithStyles(Doc)
                className="HvFileUploaderDropZone-dropZoneAreaIcon"
                color="atmo6"
                iconSize="M"
              >
                <Doc
                  className="HvFileUploaderDropZone-dropZoneAreaIcon"
                  classes={
                    Object {
                      "root": "HvIconDoc-root",
                      "rootL": "HvIconDoc-rootL",
                      "rootM": "HvIconDoc-rootM",
                      "rootS": "HvIconDoc-rootS",
                      "rootXs": "HvIconDoc-rootXs",
                    }
                  }
                  color="atmo6"
                  iconSize="M"
                >
                  <div
                    className="HvFileUploaderDropZone-dropZoneAreaIcon HvIconDoc-root HvIconDoc-rootM"
                  >
                    <svg
                      focusable={false}
                      height="32px"
                      viewBox="0 0 16 16"
                      width="32px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        className="color0"
                        d="M9 0H2v16h12V5zm3.6 5H9V1.4zm.4 10H3V1h5v5h5z"
                        fill="#BCBCBC"
                      />
                    </svg>
                  </div>
                </Doc>
              </WithStyles(Doc)>
              <div
                className="HvFileUploaderDropZone-dropZoneAreaLabels"
              >
                <WithStyles(ForwardRef)
                  className="HvFileUploaderDropZone-dragText"
                >
                  <ForwardRef
                    className="HvFileUploaderDropZone-dragText"
                    classes={
                      Object {
                        "3xlTitle": "HvTypography-3xlTitle",
                        "4xlTitle": "HvTypography-4xlTitle",
                        "5xlTitle": "HvTypography-5xlTitle",
                        "baseFontFamily": "HvTypography-baseFontFamily",
                        "disabledButtonText": "HvTypography-disabledButtonText",
                        "highlightText": "HvTypography-highlightText",
                        "infoText": "HvTypography-infoText",
                        "inlineLink": "HvTypography-inlineLink",
                        "lTitle": "HvTypography-lTitle",
                        "labelText": "HvTypography-labelText",
                        "mTitle": "HvTypography-mTitle",
                        "margin": "HvTypography-margin",
                        "normalText": "HvTypography-normalText",
                        "placeholderText": "HvTypography-placeholderText",
                        "sLink": "HvTypography-sLink",
                        "sText": "HvTypography-sText",
                        "sTitle": "HvTypography-sTitle",
                        "selectedNavText": "HvTypography-selectedNavText",
                        "selectedText": "HvTypography-selectedText",
                        "vizText": "HvTypography-vizText",
                        "xlTitle": "HvTypography-xlTitle",
                        "xsTitle": "HvTypography-xsTitle",
                        "xxlTitle": "HvTypography-xxlTitle",
                        "xxsTitle": "HvTypography-xxsTitle",
                      }
                    }
                  >
                    <p
                      className="HvTypography-normalText HvTypography-baseFontFamily HvTypography-margin HvFileUploaderDropZone-dragText"
                    >
                      <span
                        className="HvFileUploaderDropZone-selectFilesText"
                      >
                         undefined
                      </span>
                    </p>
                  </ForwardRef>
                </WithStyles(ForwardRef)>
              </div>
            </div>
          </div>
        </DropZone>
      </WithStyles(DropZone)>
    </ThemeProvider>
  </StylesProvider>
</HvProvider>
`;
